# Nyx-Helios

./: .gitignore  CMakeLists.txt  LICENSE  NyxHelios.todo  README.md
Documentation/: config.dox
Source/: example.cpp  example.hpp  main.cpp  mainpage.dox
Source/Assets/: dragon.mtl
Source/Helios/: Helios.cpp  Helios.dox  Helios.hpp  System-Libraries.hpp
Source/Helios/Camera/: Camera.cpp  Camera.hpp
Source/Helios/Debugging/: Debugging.cpp  Debugging.hpp
Source/Helios/Debuging/: Debuging.cpp  Debuging.hpp
Source/Helios/Helios-Shaders/: Basic-Fragment.glsl  Basic-Vertex.glsl  minimum-fragment.glsl  minimum-vertex.glsl
Source/Helios/OpenGL-Wrappers/: Helios-Wrappers.cpp  Helios-Wrappers.hpp  Uniform-Access.hpp
Source/Helpers/: log.cpp  log.hpp  wavefront-loader.cpp  wavefront-loader.hpp
Source/Nyx/: .NyxHidden.hpp  Nyx.cpp  Nyx.dox  Nyx.hpp  System-Libraries.hpp
Source/Nyx/Helpers/: log.cpp  log.hpp
Source/Nyx/Nyx-Input/: Nyx-Input.cpp  Nyx-Input.hpp
Source/Nyx/Nyx-Peripherals/: Nyx-Peripherals.cpp  Nyx-Peripherals.hpp
Source/Nyx/Nyx-Window/: Nyx-Window.cpp  Nyx-Window.hpp
